<resources>
    <string name="app_name">My Applicationdb</string>
    <string name="title_activity_acceuill">Acceuill</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">ProfileActivity</string>


    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <string name="title_activity_aceuil">Aceuil</string>
    <string name="title_activity_news_detail">NewsDetailActivity</string>

    <string name="Email">Email</string>
    <string name="Pass">Mot de Passe</string>
    <string name="Connecter">Se Connecter</string>
    <string name="inscription">Inscription</string>
    <string name="mp">Mot de passe oublié?</string>
    <string name="Date">Date de naissance</string>
    <string name="tel">Téléphone</string>
    <string name="nom">Nom</string>
    <string name="Enregistrer">Enregistrer</string>
    <string name="réinitialiser">
Pour réinitialiser le mot de passe, entrez votre email, appuyez sur le bouton et vérifiez le courrier pour suivre les instructions.</string>
    <string name="réinitialiser_Mot_de_passe">réinitialiser le Mot de Passe</string>
    <string name="retour">Retour</string>

    <string name="Modifier">   modifier la photo</string>
    <string name="déscativer">  Déscativer</string>
    <string name="nouveau">  Entrez Votre Nouveau Mot de Passe</string>
    <string name="ancien">  Entrez Votre Ancien  Mot de Passe</string>
    <string name="accueil">  Accueil</string>

    <string name="Profil">  Profil</string>

    <string name="Déconnexion">  Déconnexion</string>

    <string name="utilisateur">  nom utilisateur</string>
    <string name="erreur">Erreur de connexion</string>
    <string name="succès">connecté avec succès</string>
    <string name="remplir_les_champ">remplissez les champs s il vous plait</string>
<string name="profil_Enregistré">Profil Enregistré</string>
    <string name="profil_Modifier">Votre Profil est Modifié</string>
    <string name="mdp_Modifier">Votre Mot de Passe est Modifié</string>
    <string name="mdp_Incorrect">Votre Mot de Passe est incorrecte</string>
    <string name="desactiver">Votre Profil est Désactivé</string>

    <string name="Entrer_email">Entrez Votre Email </string>
    <string name="reset">Votre Nouveau Mot de Passe est envoyé a Votre Email </string>
</resources>


