<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.k_zaiem.myapplicationdb.profil"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ShowImageView"
        android:layout_width="wrap_content"
        android:layout_height="130dp"

        android:layout_marginHorizontal="120dp"

        android:src="@drawable/images" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/NameEditText"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:hint="@string/nom" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/DateEditText"
            android:layout_width="266dp"
            android:layout_height="100dp"
            android:hint="@string/Date"
            android:inputType="date" />


        <Button
            android:id="@+id/btnClickdate"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/cal"
            android:onClick="funDate"

            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/cardview_dark_background"
        android:layout_margin="10dp"/>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/TelEditText"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:hint="@string/tel"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/Enregistrer"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ImageNameEditText"
        android:layout_marginTop="20dp"

        android:backgroundTint="?android:attr/colorEdgeEffect"
        android:layout_margin="30dp"
        android:text="@string/Enregistrer"

        tools:textColor="@color/common_google_signin_btn_text_dark_default" />




</LinearLayout>
