<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_google_signin_btn_text_dark_default"
    android:orientation="vertical"
    tools:context="com.example.k_zaiem.myapplicationdb.gereprofil"
   android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">

    <LinearLayout
        android:layout_width="439dp"
        android:layout_height="144dp"
        android:orientation="vertical">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageprofil"
            android:layout_width="103dp"
            android:layout_height="99dp"

            android:layout_marginHorizontal="120dp"
            android:src="@drawable/images" />

        <TextView
            android:id="@+id/textViewmodif"
            android:layout_width="362dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="modifier la photo"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:gravity="center"/>

    </LinearLayout>


    <EditText
        android:id="@+id/profilnom"
        android:layout_width="match_parent"
        android:layout_height="60dp" />


    <EditText
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/nouveau"
        android:inputType="textWebPassword" />

    <EditText
        android:id="@+id/profilpass"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:hint="@string/ancien"
        android:inputType="textPassword" />


    <EditText
        android:id="@+id/profildate"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="date" />


    <EditText
        android:id="@+id/profiltel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="phone" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="79dp"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/modifier"
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            android:backgroundTint="?android:attr/colorEdgeEffect"
            android:text="@string/Enregistrer"
            tools:textColor="@color/common_google_signin_btn_text_dark_default" />

        <Button
            android:id="@+id/desativer"
            android:layout_width="183dp"
            android:layout_height="wrap_content"

            android:backgroundTint="?android:attr/colorEdgeEffect"
            android:text="@string/déscativer"
            tools:textColor="@color/common_google_signin_btn_text_dark_default" />


    </LinearLayout>
</LinearLayout>
