<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_google_signin_btn_text_dark_default"
    android:orientation="vertical"
    tools:context="com.example.k_zaiem.myapplicationdb.Connexion"
    android:layout_margin="10dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="117dp"
        app:srcCompat="@drawable/welcom" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="2dp"
            android:layout_height="51dp"
            android:layout_weight="1"
            android:text="@string/Connecter"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/regTxt"
            style="@style/Base.Animation.AppCompat.Dialog"
            android:layout_width="23dp"
            android:layout_height="51dp"
            android:layout_weight="1"
            android:backgroundTint="@color/common_google_signin_btn_text_dark_default"
            android:linksClickable="true"
            android:text="@string/inscription"
            android:textColor="@android:color/holo_red_dark" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="43dp"
            android:layout_height="58dp"
            android:src="@drawable/log" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/emailTxt"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:hint="@string/Email" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="43dp"
            android:layout_height="match_parent"
            android:src="@drawable/pass" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordTxt"
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:hint="@string/Pass"
                android:password="true" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/mp"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:text="@string/mp"
        android:gravity="center"/>


    <Button
        android:id="@+id/loginBtn"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@android:dimen/app_icon_size"
        android:backgroundTint="?android:attr/colorEdgeEffect"
        android:text="@string/Connecter"
        tools:textColor="@color/common_google_signin_btn_text_dark_pressed" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <View
            android:layout_width="500px"
            android:layout_height="1px"
            android:background="@color/cardview_dark_background" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ou" />

        <View
            android:layout_width="500px"
            android:layout_height="1px"
            android:background="@color/cardview_dark_background" />
    </LinearLayout>

    <ImageView
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        app:srcCompat="@drawable/google" />




</LinearLayout>
