<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_google_signin_btn_text_dark_default"
    tools:context="com.example.k_zaiem.myapplicationdb.Insertion"
    android:orientation="vertical"
    android:layout_margin="10dp"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="126dp"
        android:src="@drawable/welcom"
        android:layout_margin="10dp"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <ImageView
            android:layout_width="43dp"
            android:layout_height="match_parent"
            android:src="@drawable/log" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/EditEmail"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:hint="@string/Email"
            />
    </android.support.design.widget.TextInputLayout>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <ImageView
            android:layout_width="43dp"
            android:layout_height="match_parent"
            android:src="@drawable/pass" />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/mdpTxt"

            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:hint="@string/Pass"
            android:password="true" />
    </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="61dp" />

    <Button
        android:id="@+id/regBtn"
        android:layout_width="271dp"
        android:layout_height="53dp"
        android:backgroundTint="?android:attr/colorEdgeEffect"
        android:layout_margin="30dp"
        android:text="@string/inscription"

        tools:textColor="@color/common_google_signin_btn_text_dark_default" />

</LinearLayout>
